smartmontools.yaml
# Source: netdata/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: smartmontools-server
  labels:
    app: smartmontools
spec:
  selector:
    matchLabels:
      app: smartmontools
  template:
    metadata:
      labels:
        app: smartmontools
    spec:
      nodeSelector:
        kubernetes.io/hostname: "server.management.lan"
      containers:
        - name: smartmontools
          image: "nightexcessive/smartmontools:v1.0.4"
          securityContext:
            privileged: true
          volumeMounts:
            - name: lib
              mountPath: /var/lib/smartmontools
            - name: config
              mountPath: /etc/smartd.conf
              subPath: smartd
            - name: config-global
              mountPath: /etc/msmtprc
              subPath: msmtprc
      volumes:
        - name: lib
          hostPath:
            path: /var/lib/smartmontools
            type: DirectoryOrCreate
        - name: config
          configMap:
            name: smartmontools-config-server
        - name: config-global
          configMap:
            name: smartmontools-config-global
