postfix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  labels:
    app: smtp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
        - name: postfix
          image: "nightexcessive/postfix-relay:v1.0.7"
          ports:
            - containerPort: 25
              name: smtp
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-relay
spec:
  selector:
    app: smtp
  ports:
  - name: smtp
    port: 25
    targetPort: 25
