oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
      - name: oauth-proxy
        image: "quay.io/pusher/oauth2_proxy:v3.2.0"
        args:
        - -config=/etc/oauth2_proxy.cfg
        volumeMounts:
          - name: config
            mountPath: /etc/oauth2_proxy.cfg
            subPath: config
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      volumes:
        - name: config
          configMap:
            name: oauth-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
spec:
  selector:
    app: oauth-proxy
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  rules:
    - host: login.home.johnson.computer
      http:
        paths:
          - backend:
              serviceName: oauth-proxy
              servicePort: http
  tls:
    - hosts:
      - login.home.johnson.computer
      secretName: oauth-proxy-certificate
